--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Titulo do site</title>
+    <title>Midias em HTML5</title>
 </head>
 <body>
-     <main>
-         <header>
-              <h1>Titulo do site</h1>
-         </header>
-         <article>
-             <h2>Artigo 001</h2>
-              <p>Texto Artigo 001</p>
-         </article>
-         <article>
-              <h2>Artigo 002</h2> 
-              <p>Texto artigo 002</p>    
-        </article>
-     </main>
+     <h1>News podcasts</h1>
+     <p>Compartlihe esse site 
+     com seus amigos.
+     </p>
+
+     <picture>
+            <source media="(max-width:700px )" srcset="compartilhamento.png"
+            type="image/png">
+           <source media="(max-width: 1050px)" srcset="media.png"
+            type="image/png">
+         <img src="grande.png" alt="Foto flexivel">
+     </picture>
+
+      <h1>Ouça uma Musiquinha</h1>
+     <p>Vamos ouvir.</p>
+     <audio src="Kazoom - Quincas Moreira (1).mp3" controls autoplay></audio>
+     <h2>Siga minhas redes sociais</h2>
+
+     <p>Meu <a href="https://www.youtube.com/channel/UCwFUHJBvVaFqxXlIDexSBUQ?view_as=subscriber"target="_blank" rel="external">canal</a></p>
+     <p>Meu  <a href="https://www.instagram.com/calebecarvalhomarques/" target="_blank" rel="external">Instagram</a></p>
+     <p>Meu  <a href="https://github.com/calebemarques"target="_blank" rel="external">Repositorio no github</a></p>
 </body>
 </html>
