--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Midias em HTML5</title>
 </head>
 <body>
@@ -23,10 +24,11 @@
       <h1>Ouça uma Musiquinha</h1>
      <p>Vamos ouvir.</p>
      <audio src="Kazoom - Quincas Moreira (1).mp3" controls autoplay></audio>
-     <h2>Siga minhas redes sociais</h2>
+     <p>Siga minhas <a href="/https://www.instagram.com/calebecarvalhomarques/https://www.youtube.com/channel/UCwFUHJBvVaFqxXlIDexSBUQ?view_as=subscriber/https://www.facebook.com/calebe.marques.737/"> todas redes sociais </a> </p>
 
      <p>Meu <a href="https://www.youtube.com/channel/UCwFUHJBvVaFqxXlIDexSBUQ?view_as=subscriber"target="_blank" rel="external">canal</a></p>
      <p>Meu  <a href="https://www.instagram.com/calebecarvalhomarques/" target="_blank" rel="external">Instagram</a></p>
      <p>Meu  <a href="https://github.com/calebemarques"target="_blank" rel="external">Repositorio no github</a></p>
+     <p>Meu <a href="https://www.facebook.com/calebe.marques.737/" target="_blank" rel="external">Facebook</a></p>
 </body>
 </html>
